# rust_api_pdf_to_ocr

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
