[package]
name = "rust_api_pdf_to_ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
actix-web = { version = "4.9", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
base64 = "0.21"
mupdf = "0.5.0"